--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 
 @font-face {
 	font-family: outfit;
-	src: url(/assets/fonts/outfit/Outfit-VariableFont_wght.ttf);
+	src: url(Outfit-VariableFont_wght.ttf);
 }
 
 @font-face {
 	font-family: youngSerif;
-	src: url(/assets/fonts/young-serif/YoungSerif-Regular.ttf);
+	src: url(YoungSerif-Regular.ttf);
 }
 
 main {
